1. Метод .of [#357941]